# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  chip8renderer.h  emulator.h  event.h  event_logger.h  message_queue.h  opcode.h
src/: Chip8.cpp  Chip8Renderer.cpp  Event.cpp  OpcodeHandler.cpp  emulator.cpp  main.cpp
